--- a/templates/index.html
+++ b/templates/index.html
@@ -1,117 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> -->
+{% block main %}
 
-  <!-- bootstrap desde nodemodules -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <title>Ninja Gold</title>
-  <style>
-    .barra {
-      height: 210px;
-      overflow: scroll;
-    }
-
-    form {
-      padding: 1.9rem 0.9rem;
-      border: 2px solid maroon;
-      border-radius: 2rem;
-      width: 100%;
-      margin: 1rem auto;
-    }
-
-    p {
-      font-weight: bold;
-      font-size: larger;
-    }
-
-    h6 {
-      font-size: smaller;
-    }
-
-    span {
-      margin-left: 16%;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container mt-5 bg-primary bg-opacity-25 p-4">
-    
-    <h2>Tu Oro {{total_oro}}</h2>
-    <div class="row">
-
-      <!-- Granja -->
-      <div class="col-6 col-md-3">
-        <!-- <form action="/gold/process_money/granja" method="post"> -->
+  <div class="container mt-5 bg-warning bg-opacity-25 p-4">
+    <h2 class="text-center">Ninja Gold</h2>
+    <div class="row"> 
+      <div class="col-4">
         <form method="post" action="/gold/process_money/">
-          <p>Granja <span>🟡</span></p>
-          <h6>(gana 10-20 oro)</h6>
-          <input type="hidden" name="opcion" value="granja" class="mb-3">
-          <!-- <input type="text" name="nombre"> -->
-          <!-- <input type="submit" value="Encontrar Oro"> -->
-          <button type="submit" class="btn btn-primary">Encontrar Oro</button>
+          <!-- <p>Cueva <span>🟡</span></p>
+          <h6>(gana 5-10 oro)</h6> -->
+          <input type="hidden" name="opcion" value="" class="mb-3">
+          <button type="submit" class="btn btn-secondary">Práctica</button>
+          <p>Modo práctica</p>
+
+        </form>
+      </div>  
+      <div class="col-4">
+        <form method="post" action="/gold/process_money/">
+          <!-- <p>Cueva <span>🟡</span></p>
+          <h6>(gana 5-10 oro)</h6> -->
+          <input type="hidden" name="opcion" value="" class="mb-3">
+          <button type="submit" class="btn btn-success">Facil</button>
+          <p>Modo fácil</p>
         </form>
       </div>
-
-      <!-- Cueva -->
-      <div class="col-6 col-md-3">
+      <div class="col-4">
         <form method="post" action="/gold/process_money/">
-          <p>Cueva <span>🟡</span></p>
-          <h6>(gana 5-10 oro)</h6>
-          <input type="hidden" name="opcion" value="cueva" class="mb-3">
-          <button type="submit" class="btn btn-primary">Encontrar Oro</button>
-        </form>
-      </div>
+          <!-- <p>Cueva <span>🟡</span></p>
+          <h6>(gana 5-10 oro)</h6> -->
+          <input type="hidden" name="opcion" value="" class="mb-3">
+          <button type="submit" class="btn btn-danger">Difícil</button>
+          <p>Modo difícil</p>
 
-      <!-- Casa -->
-      <div class="col-6 col-md-3">
-        <form method="post" action="/gold/process_money/">
-          <p>Casa <span>🟡</span></p>
-          <h6>(gana 2-5 oro)</h6>
-          <input type="hidden" name="opcion" value="casa" class="mb-3">
-          <button type="submit" class="btn btn-primary">Encontrar Oro</button>
         </form>
-      </div>
-
-      <!-- Casino -->
-      <div class="col-6 col-md-3">
-        <form method="post" action="/gold/process_money/">
-          <p>Casino <span>🟡</span></p> 
-          <h6>(gana/pierde 0-50)</h6>
-          <input type="hidden" name="opcion" value="casino" class="mb-3">
-          <button type="submit" class="btn btn-primary">Encontrar Oro</button>
-        </form>
-      </div>
-
+      </div>     
+      
     </div>
   </div>
-  <!-- <div class="contaniner">
-    <h6>Usted lleva {{intentos}} intento{% if intentos > 1 %}s{% endif %}</h6>
-    <h3>Su palabra es: {{palabra}}</h3>
-    <p><a href="/random/reset">Volver a 0</a></p>
-  </div>
--->
-
-  <div class="container mt-5 bg-primary bg-opacity-25 p-4">
-    <h2>Jugadas</h2>
-    <div class="row">
-      <div class="list-group barra overflow-auto">
-        {% for jugada in jugadas %}
-          {% if jugada.accion == 'Gana: ' %}
-            <a class="list-group-item list-group-item-action list-group-item-success">{{jugada.accion}} {{jugada.oro}} Oro en {{jugada.opcion}}</a>
-            {% else %} 
-            <a class="list-group-item list-group-item-action list-group-item-danger">{{jugada.accion}} {{jugada.oro}} Oro en {{jugada.opcion}}</a>
-          {%endif%}
-        {% endfor %}
-      </div>
-    </div>
-  </div>
-</body>
-
-</html>
+  {% endblock %}
